@@ -294,6 +294,7 @@ public class ShoppingListFragment extends BaseFragment implements
                 .setShoppingListItem(shoppingListItem));
     }
 
+    @Override
     public void saveText(Spanned notes) {
         viewModel.saveNotes(notes);
     }
